--- a/companyPhilosophy.html
+++ b/companyPhilosophy.html
@@ -70,7 +70,7 @@
 
             <h1 class="text-success fw-bold text-center mt-5">OUR MISSION</h1>
             <p class="justify-text">
-                Our organization is driven towards a single goal: customer satisfaction. We at Pakistan Scientific Traders aim to ensure that our market leadership extends far beyond hardware, into turfs like customer loyalty, product diversity, and the establishment of mutual trust between our customers, suppliers, and employees. Our mission is not the quantitative growth of the company, but to ensure that through our diversity, speed, and quality we are able to bring about an improvement in the quality of life of society at large, by partnering with our customers to create economic opportunity.
+                Our organization is driven towards a single goal <span class="text-capitalize fst-italic fw-bold text-success">customer satisfaction.</span> We at Pakistan Scientific Traders aim to ensure that our market leadership extends far beyond hardware, into turfs like customer loyalty, product diversity, and the establishment of mutual trust between our customers, suppliers, and employees. Our mission is not the quantitative growth of the company, but to ensure that through our diversity, speed, and quality we are able to bring about an improvement in the quality of life of society at large, by partnering with our customers to create economic opportunity.
             </p>
 
             <h1 class="text-success fw-bold text-center mt-5">OUR VISION</h1>
