--- a/companyPhilosophy.html
+++ b/companyPhilosophy.html
@@ -85,64 +85,65 @@
         </div>
     </section>
 
-    <!-- Footer -->
+   <!-- Footer -->
     <section class="bg-light">
         <div class="footer container pt-5">
-            <br><br><br>
             <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 pt-5 pb-5">
+                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 pt-3 pb-3">
                     <img src="asserts/images/logo.png" class="w-25" alt="Pakistan Scientafic Traders">
-                    <br><br><br>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 pt-5 pb-5">
+                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 pt-5">
                         <h4>SITE MAP</h4>
                         <hr>
                         <div class="ps-4 fw-bold">
-                            <h6><a href="index.html" class="nav-link">Home</a></h6>
-                            <h6></h6><a href="principles.html" class="nav-link">Principles</a></h6>
-                            <h6></h6><a href="services.html" class="nav-link">Services</a></h6>
-                            <h6></h6><a href="history.html" class="nav-link">About us</a></h6>
-                            <h6></h6><a href="contactUs.html" class="nav-link">Contact us</a><br></h6>
+                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="principles.html" class="nav-link">Principles</a>
+                            <a href="services.html" class="nav-link">Services</a>
+                            <a href="history.html" class="nav-link">About us</a>
+                            <a href="contactUs.html" class="nav-link">Contact us</a><br>
                         </div>
-                        <br>
-                        <h6 class="text-nowrap">Email: <a href="info@pakistanscientific.com.pk"
-                                class="text-dark">info@pakistanscientific.com.pk</a></h6>
+
+                        <h6 class="text-nowrap pt-3">Email: <a href="mailto:info@pakistanscientific.com.pk"
+                                class="email-hover">info@pakistanscientific.com.pk</a></h6>
                     </div>
 
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 pt-5 pb-5">
+                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 pt-5 pb-3">
                         <h4>OFFICES</h4>
                         <hr>
                         <div class="ps-4 fw-bold">
-                            <h6 class="text-dark"><span class="fw-bolder">Lahore Head Office </span> <br><br>
+                            <!-- Lahore Head Office -->
+                            <h6 class="mb-3"><span class="fw-bolder">Lahore Head Office </span> <br><br>
                                 Office:F-10, 1st Floor, Fazal Apartments,
                                 5-Faiz Road, Old Muslim Town
-                                Lahore - 54000, Pakistan <br><br>
-                                Tel: +92-42-363 15 232<br>
-                                Fax: +92-42-363 15 320</h6>
+                                Lahore - 54000, Pakistan</h6>
+                            <h6>Tel: <a href="tel:+924236315232" class="email-hover">+92-42-363 15 232</a></h6>
+                            <h6>Fax: <a href="fax:+924236315320" class="email-hover">+92-42-363 15 320</a></h6>
                             <hr>
 
-                            <h6 class="text-dark"><span class="fw-bolder">Rawalpindi Branch Office </span> <br><br>
+                            <!-- Rawalpindi Branch Office -->
+                            <h6 class="mb-3"><span class="fw-bolder">Rawalpindi Branch Office </span> <br><br>
                                 Suite# 5-6, 1st Floor, National Business
                                 Center Shamsabad, Murree Road,
-                                Rawalpindi-46300, Pakistan <br><br>
-                                Tel: +92 51 4935584<br>
-                                Fax: +92 51 4935585</h6>
+                                Rawalpindi-46300, Pakistan </h6>
+                            <h6>Tel: <a href="tel:+92514935584" class="email-hover">+92 51 4935584</a></h6>
+                            <h6>Fax: <a href="fax:+92514935585" class="email-hover">+92 51 4935 585</a></h6>
                             <hr>
 
-                            <h6 class="text-dark"><span class="fw-bolder">Karachi Branch Office</span> <br><br>
+                            <!-- Karachi Branch Office -->
+                            <h6 class="mb-3"><span class="fw-bolder">Karachi Branch Office</span> <br><br>
                                 Shop# B-82, Grace Shopping Center,
                                 Maskan Chorangi, Abul Hasan Isphani
                                 Road, Gulshan-e-Iqbal,
-                                Karachi-75300, Pakistan <br><br>
-                                Tel: +92 51 4935584<br>
-                                Fax: +92 51 4935585</h6>
+                                Karachi-75300, Pakistan </h6>
+                            <h6>Tel: <a href="tel:+92514935584" class="email-hover">+92 51 4935584</a></h6>
+                            <h6>Fax: <a href="fax:+92514935585" class="email-hover">+92 51 4935 585</a></h6>
                         </div>
                     </div>
                 </div>
                 <div class="attribute-footer text-center">
                     <hr>
-                    <p>ALL RIGHTS RESERVER BY <span><a href="index.html" class="text-dark">PAKISTAN SCIENTIFIC TRADERS
+                    <p>ALL RIGHTS RESERVER BY <span><a href="index.html" class="email-hover">PAKISTAN SCIENTIFIC TRADERS
                                 LTD</a></span> © 2023</p>
                 </div>
                 <br><br><br>
