--- a/companyPhilosophy.html
+++ b/companyPhilosophy.html
@@ -137,7 +137,7 @@
                                 Road, Gulshan-e-Iqbal,
                                 Karachi-75300, Pakistan </h6>
                             <h6>Tel: <a href="tel:+92514935584" class="email-hover">+92 51 4935584</a></h6>
-                            <h6>Fax: <a href="fax:+92514935585" class="email-hover">+92 51 4935 585</a></h6>
+                            <h6>Fax: <a href="fax:+92514935585" class="email-hover text-black">+92 51 4935 585</a></h6>
                         </div>
                     </div>
                 </div>
